--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>miniShop</title>
+    <title>Built Arena</title>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Logo.png" />
   </head>
   <body class="bg-gradient-to-b from-slate-50 to-slate-100">
     <div id="root"></div>
